Modified some details

--- a/src/main/resources/static/guessGame.html
+++ b/src/main/resources/static/guessGame.html
@@ -7,11 +7,10 @@
 <body>
 Please enter a number: <br/>
 <form method="post" action="http://localhost:8080/guess">
-    <input name="guess" type="text" size="8" value="0"/>
+    <input name="guess" type="text" size="8" value=""/>
     <br/>
     <input name="submit" type="submit" value="Send"/>
     <input type="reset">
 </form>
-
 </body>
 </html>
